PROGRESS.md: render path, sync, launch, controls; CI out of minutes
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>